set(CMAKE_CXX_FLAGS_RELEASE "-O1")
set(CMAKE_CXX_STANDARD 14)
# Point Cloud Library and Boost library
cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(3D_POSTPROCESSIONG)
find_package(PCL 1.9 REQUIRED COMPONENTS common io surface search kdtree octree visualization)
find_package( Boost 1.68 COMPONENTS program_options REQUIRED )
include_directories(${PCL_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} )
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(resampling src/smooth.cpp)
target_link_libraries(resampling ${PCL_LIBRARIES} ${Boost_LIBRARIES})

message("--- INCLUDE DIRECTORIES --")
get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
foreach(dir ${dirs})
  message("\"${dir}\",")
endforeach()
message("--- END OF INCLUDE DIRECTORIES --")

message("--- COMPILER DEFINITIONS --")
foreach( d ${DirDefs} )
    message("\"${d}\",")
endforeach()
message("--- END OF COMPILER DEFINITIONS --")